GP-17 Первая часть модуля решателя задачи
