# src/main/java/org/jenjetsu/graduate_project/controller/AppControllerApiImpl.java
@@ -1,8 +1,13 @@
 package org.jenjetsu.graduate_project.controller;
 
+import java.lang.reflect.*;
+import java.util.*;
+
 import lombok.*;
 import org.jenjetsu.graduate_project.client.api.*;
+import org.jenjetsu.graduate_project.client.model.*;
 import org.jenjetsu.graduate_project.service.*;
+import org.modelmapper.*;
 import org.springframework.http.*;
 import org.springframework.web.bind.annotation.*;
 
@@ -10,13 +15,26 @@ import org.springframework.web.bind.annotation.*;
 @RequiredArgsConstructor
 public class AppControllerApiImpl implements AppControllerApi {
 
+    private static final Type GENERIC_LIST_TYPE
+        = new TypeToken<List<ForecastDataResponseDto>>(){}.getType();
+
     private final AppService appService;
+
+    private final ModelMapper modelMapper;
 
     @Override
     public ResponseEntity<Void> apiV1AppEndpointsPost() {
         appService.clearDatabase();
 
         return ResponseEntity.ok(null);
+    }
+
+    @Override
+    public ResponseEntity<List<ForecastDataResponseDto>> getForecastData() {
+        var forecastDatas = appService.getForecastData();
+        List<ForecastDataResponseDto> dtos = modelMapper.map(forecastDatas, GENERIC_LIST_TYPE);
+
+        return ResponseEntity.ok(dtos);
     }
 
 }
